fix contact page.tsx image component from filling too big

--- a/app/globals.css
+++ b/app/globals.css
@@ -165,6 +165,25 @@ p a::after {
   mask-repeat: repeat-x;
 } 
 
+ a::after {
+  content: "";
+  position: absolute;
+  bottom: -.4em;
+  left: 0;
+  width: 95%;
+  height: .5em;
+  background-image: linear-gradient(to right, #facc15, #b45309);
+  background-image: linear-gradient(to right, #FFFBEB, #FCD34D);
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  mask-image: url(tire-tracks.png);
+  mask-size: contain;
+  -webkit-mask-repeat: repeat-x;
+  mask-repeat: repeat-x;
+} 
+
+
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
